nectar-lang/y.output
   0  $accept : program $end

   1  program : definitions

   2  definitions : class definitions
   3              | func definitions
   4              | decl definitions
   5              |

   6  meth_list : methodef meth_list
   7            |

   8  methodef : meth

   9  $$1 :

  10  class : modifier CLASS ID $$1 bodyclass

  11  modifier :
  12           | PUBLIC
  13           | ABSTRACT

  14  fields : field fields
  15         |

  16  field : '@' ID ':' type attrs
  17        | '@' ID ':' type '=' expr attrs

  18  attrs : ',' ID attrs
  19        | ',' ID '=' expr attrs
  20        |

  21  bodyclass : '{' fields meth_list '}'

  22  $$2 :

  23  $$3 :

  24  meth : modifier ID $$2 '(' params ')' RIGHTARROW type $$3 body

  25  $$4 :

  26  $$5 :

  27  func : FUNC ID $$4 '(' params ')' RIGHTARROW type $$5 body

  28  params : formals type ID
  29         |

  30  formals : formals type ID ','
  31          |

  32  type : INT
  33       | REAL
  34       | BOOL
  35       | ID

  36  body : '{' decls stmts '}'

  37  decls : decl_list decl
  38        |

  39  decl_list : decl_list decl
  40            |

  41  $$6 :

  42  decl : VAR ID ':' type $$6 vars

  43  $$7 :

  44  decl : VAR ID ':' type '[' DEC_CONST ']' $$7 vars

  45  $$8 :

  46  decl : VAR ID ':' type '=' expr $$8 vars

  47  $$9 :

  48  vars : ',' ID $$9 vars

  49  $$10 :

  50  vars : ',' ID '=' expr $$10 vars
  51       |

  52  stmts : stmts stmt
  53        |

  54  singlestmt : assign
  55             | addassign
  56             | subassign
  57             | listedassign
  58             | PRINT expr
  59             | PRINTLN expr
  60             | PRINT LITERAL
  61             | PRINTLN LITERAL
  62             | READ LITERAL ',' location
  63             | expr
  64             | PUTS inline

  65  code :

  66  stmt : assign
  67       | addassign
  68       | subassign
  69       | listedassign
  70       | RETURN expr
  71       | IF code '(' expr ')' stmt

  72  $$11 :

  73  stmt : IF code '(' expr ')' stmt ELSE $$11 stmt
  74       | singlestmt IF expr
  75       | singlestmt UNLESS expr

  76  $$12 :

  77  stmt : WHILE $$12 '(' expr ')' stmt

  78  $$13 :

  79  stmt : expr TIMES $$13 stmt
  80       | BREAK
  81       | block
  82       | PRINT expr
  83       | PRINTLN expr
  84       | PRINT LITERAL
  85       | PRINTLN LITERAL
  86       | PUTS inline
  87       | READ LITERAL ',' location
  88       | expr

  89  inline : expr ',' inline
  90         | LITERAL ',' inline
  91         | expr
  92         | LITERAL

  93  block : '{' stmts '}'

  94  addassign : location ADDASSIGN expr

  95  subassign : location SUBASSIGN expr

  96  assign : location '=' expr
  97         | location '=' assign

  98  listedassign : location ',' nestedassign ',' expr

  99  nestedassign : location ',' nestedassign ',' expr
 100               | location '=' expr

 101  method : ID

 102  location : ID

 103  expr : expr OR logAnd_expr
 104       | logAnd_expr

 105  logAnd_expr : logAnd_expr AND not_expr
 106              | not_expr

 107  not_expr : NOT comp_expr
 108           | comp_expr

 109  comp_expr : add_expr relop add_expr
 110            | add_expr

 111  relop : GE
 112        | '>'
 113        | LE
 114        | '<'
 115        | NE
 116        | EQ

 117  add_expr : add_expr addop term
 118           | term

 119  addop : '+'
 120        | '-'

 121  term : term mulop factor
 122       | factor

 123  mulop : '*'
 124        | '/'
 125        | '%'

 126  factor : incdec
 127         | '(' expr ')'
 128         | location
 129         | DEC_CONST
 130         | REAL_DEC_CONST
 131         | TRUE
 132         | FALSE
 133         | method '(' actuals ')'
 134         | '-' DEC_CONST
 135         | '-' REAL_DEC_CONST

 136  incdec : location INC
 137         | INC location
 138         | location DEC
 139         | DEC location

 140  actuals : args expr
 141          |

 142  args : args expr ','
 143       |

state 0
	$accept : . program $end  (0)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	program  goto 5
	definitions  goto 6
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 1
	func : FUNC . ID $$4 '(' params ')' RIGHTARROW type $$5 body  (27)

	ID  shift 11
	.  error


state 2
	modifier : PUBLIC .  (12)

	.  reduce 12


state 3
	modifier : ABSTRACT .  (13)

	.  reduce 13


state 4
	decl : VAR . ID ':' type $$6 vars  (42)
	decl : VAR . ID ':' type '[' DEC_CONST ']' $$7 vars  (44)
	decl : VAR . ID ':' type '=' expr $$8 vars  (46)

	ID  shift 12
	.  error


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : definitions .  (1)

	.  reduce 1


state 7
	definitions : class . definitions  (2)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	definitions  goto 13
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 8
	class : modifier . CLASS ID $$1 bodyclass  (10)

	CLASS  shift 14
	.  error


state 9
	definitions : func . definitions  (3)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	definitions  goto 15
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 10
	definitions : decl . definitions  (4)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	definitions  goto 16
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 11
	func : FUNC ID . $$4 '(' params ')' RIGHTARROW type $$5 body  (27)
	$$4 : .  (25)

	.  reduce 25

	$$4  goto 17


state 12
	decl : VAR ID . ':' type $$6 vars  (42)
	decl : VAR ID . ':' type '[' DEC_CONST ']' $$7 vars  (44)
	decl : VAR ID . ':' type '=' expr $$8 vars  (46)

	':'  shift 18
	.  error


state 13
	definitions : class definitions .  (2)

	.  reduce 2


state 14
	class : modifier CLASS . ID $$1 bodyclass  (10)

	ID  shift 19
	.  error


state 15
	definitions : func definitions .  (3)

	.  reduce 3


state 16
	definitions : decl definitions .  (4)

	.  reduce 4


state 17
	func : FUNC ID $$4 . '(' params ')' RIGHTARROW type $$5 body  (27)

	'('  shift 20
	.  error


state 18
	decl : VAR ID ':' . type $$6 vars  (42)
	decl : VAR ID ':' . type '[' DEC_CONST ']' $$7 vars  (44)
	decl : VAR ID ':' . type '=' expr $$8 vars  (46)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	ID  shift 24
	.  error

	type  goto 25


state 19
	class : modifier CLASS ID . $$1 bodyclass  (10)
	$$1 : .  (9)

	.  reduce 9

	$$1  goto 26


state 20
	func : FUNC ID $$4 '(' . params ')' RIGHTARROW type $$5 body  (27)
	params : .  (29)
	formals : .  (31)

	INT  reduce 31
	REAL  reduce 31
	BOOL  reduce 31
	')'  reduce 29
	ID  reduce 31

	params  goto 27
	formals  goto 28


state 21
	type : INT .  (32)

	.  reduce 32


state 22
	type : REAL .  (33)

	.  reduce 33


state 23
	type : BOOL .  (34)

	.  reduce 34


state 24
	type : ID .  (35)

	.  reduce 35


state 25
	decl : VAR ID ':' type . $$6 vars  (42)
	decl : VAR ID ':' type . '[' DEC_CONST ']' $$7 vars  (44)
	decl : VAR ID ':' type . '=' expr $$8 vars  (46)
	$$6 : .  (41)

	'='  shift 29
	'['  shift 30
	$end  reduce 41
	FALSE  reduce 41
	TRUE  reduce 41
	RETURN  reduce 41
	IF  reduce 41
	WHILE  reduce 41
	BREAK  reduce 41
	PRINT  reduce 41
	READ  reduce 41
	PRINTLN  reduce 41
	NOT  reduce 41
	PUTS  reduce 41
	FUNC  reduce 41
	CLASS  reduce 41
	PUBLIC  reduce 41
	ABSTRACT  reduce 41
	VAR  reduce 41
	DEC_CONST  reduce 41
	REAL_DEC_CONST  reduce 41
	'('  reduce 41
	'{'  reduce 41
	'}'  reduce 41
	'-'  reduce 41
	','  reduce 41
	ID  reduce 41
	INC  reduce 41
	DEC  reduce 41

	$$6  goto 31


state 26
	class : modifier CLASS ID $$1 . bodyclass  (10)

	'{'  shift 32
	.  error

	bodyclass  goto 33


state 27
	func : FUNC ID $$4 '(' params . ')' RIGHTARROW type $$5 body  (27)

	')'  shift 34
	.  error


state 28
	params : formals . type ID  (28)
	formals : formals . type ID ','  (30)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	ID  shift 24
	.  error

	type  goto 35


state 29
	decl : VAR ID ':' type '=' . expr $$8 vars  (46)

	FALSE  shift 36
	TRUE  shift 37
	NOT  shift 38
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	expr  goto 46
	logAnd_expr  goto 47
	not_expr  goto 48
	comp_expr  goto 49
	location  goto 50
	method  goto 51
	add_expr  goto 52
	term  goto 53
	factor  goto 54
	incdec  goto 55


state 30
	decl : VAR ID ':' type '[' . DEC_CONST ']' $$7 vars  (44)

	DEC_CONST  shift 56
	.  error


state 31
	decl : VAR ID ':' type $$6 . vars  (42)
	vars : .  (51)

	','  shift 57
	$end  reduce 51
	FALSE  reduce 51
	TRUE  reduce 51
	RETURN  reduce 51
	IF  reduce 51
	WHILE  reduce 51
	BREAK  reduce 51
	PRINT  reduce 51
	READ  reduce 51
	PRINTLN  reduce 51
	NOT  reduce 51
	PUTS  reduce 51
	FUNC  reduce 51
	CLASS  reduce 51
	PUBLIC  reduce 51
	ABSTRACT  reduce 51
	VAR  reduce 51
	DEC_CONST  reduce 51
	REAL_DEC_CONST  reduce 51
	'('  reduce 51
	'{'  reduce 51
	'}'  reduce 51
	'-'  reduce 51
	ID  reduce 51
	INC  reduce 51
	DEC  reduce 51

	vars  goto 58


state 32
	bodyclass : '{' . fields meth_list '}'  (21)
	fields : .  (15)

	'@'  shift 59
	PUBLIC  reduce 15
	ABSTRACT  reduce 15
	'}'  reduce 15
	ID  reduce 15

	fields  goto 60
	field  goto 61


state 33
	class : modifier CLASS ID $$1 bodyclass .  (10)

	.  reduce 10


state 34
	func : FUNC ID $$4 '(' params ')' . RIGHTARROW type $$5 body  (27)

	RIGHTARROW  shift 62
	.  error


state 35
	params : formals type . ID  (28)
	formals : formals type . ID ','  (30)

	ID  shift 63
	.  error


state 36
	factor : FALSE .  (132)

	.  reduce 132


state 37
	factor : TRUE .  (131)

	.  reduce 131


state 38
	not_expr : NOT . comp_expr  (107)

	FALSE  shift 36
	TRUE  shift 37
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	comp_expr  goto 64
	location  goto 50
	method  goto 51
	add_expr  goto 52
	term  goto 53
	factor  goto 54
	incdec  goto 55


state 39
	factor : DEC_CONST .  (129)

	.  reduce 129


state 40
	factor : REAL_DEC_CONST .  (130)

	.  reduce 130


state 41
	factor : '(' . expr ')'  (127)

	FALSE  shift 36
	TRUE  shift 37
	NOT  shift 38
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	expr  goto 65
	logAnd_expr  goto 47
	not_expr  goto 48
	comp_expr  goto 49
	location  goto 50
	method  goto 51
	add_expr  goto 52
	term  goto 53
	factor  goto 54
	incdec  goto 55


state 42
	factor : '-' . DEC_CONST  (134)
	factor : '-' . REAL_DEC_CONST  (135)

	DEC_CONST  shift 66
	REAL_DEC_CONST  shift 67
	.  error


43: reduce/reduce conflict (reduce 101, reduce 102) on '('
state 43
	method : ID .  (101)
	location : ID .  (102)

	$end  reduce 102
	FALSE  reduce 102
	TRUE  reduce 102
	RETURN  reduce 102
	IF  reduce 102
	ELSE  reduce 102
	WHILE  reduce 102
	BREAK  reduce 102
	PRINT  reduce 102
	READ  reduce 102
	PRINTLN  reduce 102
	TIMES  reduce 102
	UNLESS  reduce 102
	NOT  reduce 102
	AND  reduce 102
	OR  reduce 102
	PUTS  reduce 102
	FUNC  reduce 102
	CLASS  reduce 102
	PUBLIC  reduce 102
	ABSTRACT  reduce 102
	VAR  reduce 102
	DEC_CONST  reduce 102
	REAL_DEC_CONST  reduce 102
	'('  reduce 101
	')'  reduce 102
	'{'  reduce 102
	'}'  reduce 102
	'*'  reduce 102
	'/'  reduce 102
	'+'  reduce 102
	'-'  reduce 102
	'='  reduce 102
	','  reduce 102
	GE  reduce 102
	'>'  reduce 102
	LE  reduce 102
	'<'  reduce 102
	NE  reduce 102
	EQ  reduce 102
	ID  reduce 102
	INC  reduce 102
	DEC  reduce 102
	ADDASSIGN  reduce 102
	SUBASSIGN  reduce 102
	'@'  reduce 102
	'%'  reduce 102


state 44
	incdec : INC . location  (137)

	ID  shift 68
	.  error

	location  goto 69


state 45
	incdec : DEC . location  (139)

	ID  shift 68
	.  error

	location  goto 70


state 46
	decl : VAR ID ':' type '=' expr . $$8 vars  (46)
	expr : expr . OR logAnd_expr  (103)
	$$8 : .  (45)

	OR  shift 71
	$end  reduce 45
	FALSE  reduce 45
	TRUE  reduce 45
	RETURN  reduce 45
	IF  reduce 45
	WHILE  reduce 45
	BREAK  reduce 45
	PRINT  reduce 45
	READ  reduce 45
	PRINTLN  reduce 45
	NOT  reduce 45
	PUTS  reduce 45
	FUNC  reduce 45
	CLASS  reduce 45
	PUBLIC  reduce 45
	ABSTRACT  reduce 45
	VAR  reduce 45
	DEC_CONST  reduce 45
	REAL_DEC_CONST  reduce 45
	'('  reduce 45
	'{'  reduce 45
	'}'  reduce 45
	'-'  reduce 45
	','  reduce 45
	ID  reduce 45
	INC  reduce 45
	DEC  reduce 45

	$$8  goto 72


state 47
	expr : logAnd_expr .  (104)
	logAnd_expr : logAnd_expr . AND not_expr  (105)

	AND  shift 73
	$end  reduce 104
	FALSE  reduce 104
	TRUE  reduce 104
	RETURN  reduce 104
	IF  reduce 104
	ELSE  reduce 104
	WHILE  reduce 104
	BREAK  reduce 104
	PRINT  reduce 104
	READ  reduce 104
	PRINTLN  reduce 104
	TIMES  reduce 104
	UNLESS  reduce 104
	NOT  reduce 104
	OR  reduce 104
	PUTS  reduce 104
	FUNC  reduce 104
	CLASS  reduce 104
	PUBLIC  reduce 104
	ABSTRACT  reduce 104
	VAR  reduce 104
	DEC_CONST  reduce 104
	REAL_DEC_CONST  reduce 104
	'('  reduce 104
	')'  reduce 104
	'{'  reduce 104
	'}'  reduce 104
	'-'  reduce 104
	','  reduce 104
	ID  reduce 104
	INC  reduce 104
	DEC  reduce 104
	'@'  reduce 104


state 48
	logAnd_expr : not_expr .  (106)

	.  reduce 106


state 49
	not_expr : comp_expr .  (108)

	.  reduce 108


50: shift/reduce conflict (shift 74, reduce 128) on INC
50: shift/reduce conflict (shift 75, reduce 128) on DEC
state 50
	factor : location .  (128)
	incdec : location . INC  (136)
	incdec : location . DEC  (138)

	INC  shift 74
	DEC  shift 75
	$end  reduce 128
	FALSE  reduce 128
	TRUE  reduce 128
	RETURN  reduce 128
	IF  reduce 128
	ELSE  reduce 128
	WHILE  reduce 128
	BREAK  reduce 128
	PRINT  reduce 128
	READ  reduce 128
	PRINTLN  reduce 128
	TIMES  reduce 128
	UNLESS  reduce 128
	NOT  reduce 128
	AND  reduce 128
	OR  reduce 128
	PUTS  reduce 128
	FUNC  reduce 128
	CLASS  reduce 128
	PUBLIC  reduce 128
	ABSTRACT  reduce 128
	VAR  reduce 128
	DEC_CONST  reduce 128
	REAL_DEC_CONST  reduce 128
	'('  reduce 128
	')'  reduce 128
	'{'  reduce 128
	'}'  reduce 128
	'*'  reduce 128
	'/'  reduce 128
	'+'  reduce 128
	'-'  reduce 128
	','  reduce 128
	GE  reduce 128
	'>'  reduce 128
	LE  reduce 128
	'<'  reduce 128
	NE  reduce 128
	EQ  reduce 128
	ID  reduce 128
	'@'  reduce 128
	'%'  reduce 128


state 51
	factor : method . '(' actuals ')'  (133)

	'('  shift 76
	.  error


52: shift/reduce conflict (shift 78, reduce 110) on '-'
state 52
	comp_expr : add_expr . relop add_expr  (109)
	comp_expr : add_expr .  (110)
	add_expr : add_expr . addop term  (117)

	'+'  shift 77
	'-'  shift 78
	GE  shift 79
	'>'  shift 80
	LE  shift 81
	'<'  shift 82
	NE  shift 83
	EQ  shift 84
	$end  reduce 110
	FALSE  reduce 110
	TRUE  reduce 110
	RETURN  reduce 110
	IF  reduce 110
	ELSE  reduce 110
	WHILE  reduce 110
	BREAK  reduce 110
	PRINT  reduce 110
	READ  reduce 110
	PRINTLN  reduce 110
	TIMES  reduce 110
	UNLESS  reduce 110
	NOT  reduce 110
	AND  reduce 110
	OR  reduce 110
	PUTS  reduce 110
	FUNC  reduce 110
	CLASS  reduce 110
	PUBLIC  reduce 110
	ABSTRACT  reduce 110
	VAR  reduce 110
	DEC_CONST  reduce 110
	REAL_DEC_CONST  reduce 110
	'('  reduce 110
	')'  reduce 110
	'{'  reduce 110
	'}'  reduce 110
	','  reduce 110
	ID  reduce 110
	INC  reduce 110
	DEC  reduce 110
	'@'  reduce 110

	relop  goto 85
	addop  goto 86


state 53
	add_expr : term .  (118)
	term : term . mulop factor  (121)

	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	$end  reduce 118
	FALSE  reduce 118
	TRUE  reduce 118
	RETURN  reduce 118
	IF  reduce 118
	ELSE  reduce 118
	WHILE  reduce 118
	BREAK  reduce 118
	PRINT  reduce 118
	READ  reduce 118
	PRINTLN  reduce 118
	TIMES  reduce 118
	UNLESS  reduce 118
	NOT  reduce 118
	AND  reduce 118
	OR  reduce 118
	PUTS  reduce 118
	FUNC  reduce 118
	CLASS  reduce 118
	PUBLIC  reduce 118
	ABSTRACT  reduce 118
	VAR  reduce 118
	DEC_CONST  reduce 118
	REAL_DEC_CONST  reduce 118
	'('  reduce 118
	')'  reduce 118
	'{'  reduce 118
	'}'  reduce 118
	'+'  reduce 118
	'-'  reduce 118
	','  reduce 118
	GE  reduce 118
	'>'  reduce 118
	LE  reduce 118
	'<'  reduce 118
	NE  reduce 118
	EQ  reduce 118
	ID  reduce 118
	INC  reduce 118
	DEC  reduce 118
	'@'  reduce 118

	mulop  goto 90


state 54
	term : factor .  (122)

	.  reduce 122


state 55
	factor : incdec .  (126)

	.  reduce 126


state 56
	decl : VAR ID ':' type '[' DEC_CONST . ']' $$7 vars  (44)

	']'  shift 91
	.  error


state 57
	vars : ',' . ID $$9 vars  (48)
	vars : ',' . ID '=' expr $$10 vars  (50)

	ID  shift 92
	.  error


state 58
	decl : VAR ID ':' type $$6 vars .  (42)

	.  reduce 42


state 59
	field : '@' . ID ':' type attrs  (16)
	field : '@' . ID ':' type '=' expr attrs  (17)

	ID  shift 93
	.  error


state 60
	bodyclass : '{' fields . meth_list '}'  (21)
	meth_list : .  (7)
	modifier : .  (11)

	PUBLIC  shift 2
	ABSTRACT  shift 3
	'}'  reduce 7
	ID  reduce 11

	meth_list  goto 94
	modifier  goto 95
	methodef  goto 96
	meth  goto 97


state 61
	fields : field . fields  (14)
	fields : .  (15)

	'@'  shift 59
	PUBLIC  reduce 15
	ABSTRACT  reduce 15
	'}'  reduce 15
	ID  reduce 15

	fields  goto 98
	field  goto 61


state 62
	func : FUNC ID $$4 '(' params ')' RIGHTARROW . type $$5 body  (27)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	ID  shift 24
	.  error

	type  goto 99


state 63
	params : formals type ID .  (28)
	formals : formals type ID . ','  (30)

	','  shift 100
	')'  reduce 28


state 64
	not_expr : NOT comp_expr .  (107)

	.  reduce 107


state 65
	expr : expr . OR logAnd_expr  (103)
	factor : '(' expr . ')'  (127)

	OR  shift 71
	')'  shift 101
	.  error


state 66
	factor : '-' DEC_CONST .  (134)

	.  reduce 134


state 67
	factor : '-' REAL_DEC_CONST .  (135)

	.  reduce 135


state 68
	location : ID .  (102)

	.  reduce 102


state 69
	incdec : INC location .  (137)

	.  reduce 137


state 70
	incdec : DEC location .  (139)

	.  reduce 139


state 71
	expr : expr OR . logAnd_expr  (103)

	FALSE  shift 36
	TRUE  shift 37
	NOT  shift 38
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	logAnd_expr  goto 102
	not_expr  goto 48
	comp_expr  goto 49
	location  goto 50
	method  goto 51
	add_expr  goto 52
	term  goto 53
	factor  goto 54
	incdec  goto 55


state 72
	decl : VAR ID ':' type '=' expr $$8 . vars  (46)
	vars : .  (51)

	','  shift 57
	$end  reduce 51
	FALSE  reduce 51
	TRUE  reduce 51
	RETURN  reduce 51
	IF  reduce 51
	WHILE  reduce 51
	BREAK  reduce 51
	PRINT  reduce 51
	READ  reduce 51
	PRINTLN  reduce 51
	NOT  reduce 51
	PUTS  reduce 51
	FUNC  reduce 51
	CLASS  reduce 51
	PUBLIC  reduce 51
	ABSTRACT  reduce 51
	VAR  reduce 51
	DEC_CONST  reduce 51
	REAL_DEC_CONST  reduce 51
	'('  reduce 51
	'{'  reduce 51
	'}'  reduce 51
	'-'  reduce 51
	ID  reduce 51
	INC  reduce 51
	DEC  reduce 51

	vars  goto 103


state 73
	logAnd_expr : logAnd_expr AND . not_expr  (105)

	FALSE  shift 36
	TRUE  shift 37
	NOT  shift 38
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	not_expr  goto 104
	comp_expr  goto 49
	location  goto 50
	method  goto 51
	add_expr  goto 52
	term  goto 53
	factor  goto 54
	incdec  goto 55


state 74
	incdec : location INC .  (136)

	.  reduce 136


state 75
	incdec : location DEC .  (138)

	.  reduce 138


state 76
	factor : method '(' . actuals ')'  (133)
	actuals : .  (141)
	args : .  (143)

	FALSE  reduce 143
	TRUE  reduce 143
	NOT  reduce 143
	DEC_CONST  reduce 143
	REAL_DEC_CONST  reduce 143
	'('  reduce 143
	')'  reduce 141
	'-'  reduce 143
	ID  reduce 143
	INC  reduce 143
	DEC  reduce 143

	actuals  goto 105
	args  goto 106


state 77
	addop : '+' .  (119)

	.  reduce 119


state 78
	addop : '-' .  (120)

	.  reduce 120


state 79
	relop : GE .  (111)

	.  reduce 111


state 80
	relop : '>' .  (112)

	.  reduce 112


state 81
	relop : LE .  (113)

	.  reduce 113


state 82
	relop : '<' .  (114)

	.  reduce 114


state 83
	relop : NE .  (115)

	.  reduce 115


state 84
	relop : EQ .  (116)

	.  reduce 116


state 85
	comp_expr : add_expr relop . add_expr  (109)

	FALSE  shift 36
	TRUE  shift 37
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	location  goto 50
	method  goto 51
	add_expr  goto 107
	term  goto 53
	factor  goto 54
	incdec  goto 55


state 86
	add_expr : add_expr addop . term  (117)

	FALSE  shift 36
	TRUE  shift 37
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	location  goto 50
	method  goto 51
	term  goto 108
	factor  goto 54
	incdec  goto 55


state 87
	mulop : '*' .  (123)

	.  reduce 123


state 88
	mulop : '/' .  (124)

	.  reduce 124


state 89
	mulop : '%' .  (125)

	.  reduce 125


state 90
	term : term mulop . factor  (121)

	FALSE  shift 36
	TRUE  shift 37
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	location  goto 50
	method  goto 51
	factor  goto 109
	incdec  goto 55


state 91
	decl : VAR ID ':' type '[' DEC_CONST ']' . $$7 vars  (44)
	$$7 : .  (43)

	.  reduce 43

	$$7  goto 110


state 92
	vars : ',' ID . $$9 vars  (48)
	vars : ',' ID . '=' expr $$10 vars  (50)
	$$9 : .  (47)

	'='  shift 111
	$end  reduce 47
	FALSE  reduce 47
	TRUE  reduce 47
	RETURN  reduce 47
	IF  reduce 47
	WHILE  reduce 47
	BREAK  reduce 47
	PRINT  reduce 47
	READ  reduce 47
	PRINTLN  reduce 47
	NOT  reduce 47
	PUTS  reduce 47
	FUNC  reduce 47
	CLASS  reduce 47
	PUBLIC  reduce 47
	ABSTRACT  reduce 47
	VAR  reduce 47
	DEC_CONST  reduce 47
	REAL_DEC_CONST  reduce 47
	'('  reduce 47
	'{'  reduce 47
	'}'  reduce 47
	'-'  reduce 47
	','  reduce 47
	ID  reduce 47
	INC  reduce 47
	DEC  reduce 47

	$$9  goto 112


state 93
	field : '@' ID . ':' type attrs  (16)
	field : '@' ID . ':' type '=' expr attrs  (17)

	':'  shift 113
	.  error


state 94
	bodyclass : '{' fields meth_list . '}'  (21)

	'}'  shift 114
	.  error


state 95
	meth : modifier . ID $$2 '(' params ')' RIGHTARROW type $$3 body  (24)

	ID  shift 115
	.  error


state 96
	meth_list : methodef . meth_list  (6)
	meth_list : .  (7)
	modifier : .  (11)

	PUBLIC  shift 2
	ABSTRACT  shift 3
	'}'  reduce 7
	ID  reduce 11

	meth_list  goto 116
	modifier  goto 95
	methodef  goto 96
	meth  goto 97


state 97
	methodef : meth .  (8)

	.  reduce 8


state 98
	fields : field fields .  (14)

	.  reduce 14


state 99
	func : FUNC ID $$4 '(' params ')' RIGHTARROW type . $$5 body  (27)
	$$5 : .  (26)

	.  reduce 26

	$$5  goto 117


state 100
	formals : formals type ID ',' .  (30)

	.  reduce 30


state 101
	factor : '(' expr ')' .  (127)

	.  reduce 127


state 102
	expr : expr OR logAnd_expr .  (103)
	logAnd_expr : logAnd_expr . AND not_expr  (105)

	AND  shift 73
	$end  reduce 103
	FALSE  reduce 103
	TRUE  reduce 103
	RETURN  reduce 103
	IF  reduce 103
	ELSE  reduce 103
	WHILE  reduce 103
	BREAK  reduce 103
	PRINT  reduce 103
	READ  reduce 103
	PRINTLN  reduce 103
	TIMES  reduce 103
	UNLESS  reduce 103
	NOT  reduce 103
	OR  reduce 103
	PUTS  reduce 103
	FUNC  reduce 103
	CLASS  reduce 103
	PUBLIC  reduce 103
	ABSTRACT  reduce 103
	VAR  reduce 103
	DEC_CONST  reduce 103
	REAL_DEC_CONST  reduce 103
	'('  reduce 103
	')'  reduce 103
	'{'  reduce 103
	'}'  reduce 103
	'-'  reduce 103
	','  reduce 103
	ID  reduce 103
	INC  reduce 103
	DEC  reduce 103
	'@'  reduce 103


state 103
	decl : VAR ID ':' type '=' expr $$8 vars .  (46)

	.  reduce 46


state 104
	logAnd_expr : logAnd_expr AND not_expr .  (105)

	.  reduce 105


state 105
	factor : method '(' actuals . ')'  (133)

	')'  shift 118
	.  error


state 106
	actuals : args . expr  (140)
	args : args . expr ','  (142)

	FALSE  shift 36
	TRUE  shift 37
	NOT  shift 38
	DEC_CONST  shift 39
	REAL_DEC_CONST  shift 40
	'('  shift 41
	'-'  shift 42
	ID  shift 43
	INC  shift 44
	DEC  shift 45
	.  error

	expr  goto 119
	logAnd_expr  goto 47
	not_expr  goto 48
	comp_expr  goto 49
	location  goto 50
	method  goto 51
	add_expr  goto 52
	term  goto 53
	factor  goto 54
	incdec  goto 55


107: shift/reduce conflict (shift 78, reduce 109) on '-'
state 107
	comp_expr : add_expr relop add_expr .  (109)
	add_expr : add_expr . addop term  (117)

	'+'  shift 77
	'-'  shift 78
	$end  reduce 109
	FALSE  reduce 109
	TRUE  reduce 109
	RETURN  reduce 109
	IF  reduce 109
	ELSE  reduce 109
	WHILE  reduce 109
	BREAK  reduce 109
	PRINT  reduce 109
	READ  reduce 109
	PRINTLN  reduce 109
	TIMES  reduce 109
	UNLESS  reduce 109
	NOT  reduce 109
	AND  reduce 109
	OR  reduce 109
	PUTS  reduce 109
	FUNC  reduce 109
	CLASS  reduce 109
	PUBLIC  reduce 109
	ABSTRACT  reduce 109
	VAR  reduce 109
	DEC_CONST  reduce 109
	REAL_DEC_CONST  reduce 109
	'('  reduce 109
	')'  reduce 109
	'{'  reduce 109
	'}'  reduce 109
	','  reduce 109
	ID  reduce 109
	INC  reduce 109
	DEC  reduce 109
	'@'  reduce 109
